Fixed some copy/paste related errors in individu | some changes in login

--- a/angular-frontend/src/app/auth/component/login/login.component.html
+++ b/angular-frontend/src/app/auth/component/login/login.component.html
@@ -13,7 +13,7 @@
     <h1 class="text-dark fw-bolder mb-3">Sign In</h1>
     <!--end::Title-->
     <!--begin::Subtitle-->
-    <div class="text-gray-500 fw-semibold fs-6">Your Social Campaigns</div>
+    <div class="text-gray-500 fw-semibold fs-6">Your Learning Space</div>
     <div class="text-gray-500 fw-semibold fs-6"></div>
     <div *ngIf="msgError != ''" class="alert alert-danger">
       <div>
