--- a/angular-frontend/src/app/components/evaluation/evaluation.component.html
+++ b/angular-frontend/src/app/components/evaluation/evaluation.component.html
@@ -4,7 +4,7 @@
       <h2 class="form-title text-primary fw-bold mb-3">Feel free to share your feedback</h2>
     </div>
     <div class="alert alert-info alert-dismissible fade show fs-5" role="alert">
-      Please <strong class="fs-3">note</strong> that once feedbacks are submitted, they cannot be edited or
+      Please <strong class="fs-3 fw-bolder">note</strong> that once feedbacks are submitted, they cannot be edited or
       re-added. This policy ensures the integrity of the feedback process and
       maintains fairness for all participants.
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
