--- a/angular-frontend/src/app/Admin/formator/add-formator/add-formator.component.html
+++ b/angular-frontend/src/app/Admin/formator/add-formator/add-formator.component.html
@@ -4,12 +4,10 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="card-header card-header-danger sticky-top fixed">
-                        <h4 class="card-title">Ajouter Un Formateur</h4>
-                        <div class="card-category">
-                            <a class="btn btn-outline-primary float-right" routerLink="/admin/formateur/get">
-                                Liste Des Formateurs
-                            </a>
-                        </div>
+                        <h4 class="card-title d-inline-block">Ajouter Un Formateur</h4>
+                      <button class="btn btn-success"  routerLink="/admin/formateur/get" >
+                        Liste Des Formateurs
+                      </button>
                     </div>
 
                     <div class="card-body ">
@@ -18,8 +16,7 @@
                                 <!-- NOM -->
                                 <label for="name">Nom</label>
                                 <!-- ngModel same name in ts -->
-                                <input [(ngModel)]="name" class="form-control" type="text" name="name" id="name"
-                                    required>
+                                <input [(ngModel)]="name" class="form-control" type="text" name="name" id="name" required>
                             </div>
                             <div class="form-group">
                                 <!-- email -->
@@ -30,26 +27,24 @@
                             <div class="form-group">
                                 <!-- password -->
                                 <label for="password">Password</label>
-                                <input [(ngModel)]="password" class="form-control" type="password" name="password"
-                                    id="password" required>
+                                <input [(ngModel)]="password" class="form-control" type="password" name="password" id="password"
+                                    required>
                             </div>
                             <div class="form-group">
                                 <!-- competences -->
                                 <label for="competences">Competences</label>
-                                <input [(ngModel)]="competences" class="form-control" type="text" name="competences"
-                                    id="competences">
-                            </div>
+                                <input [(ngModel)]="competences" class="form-control" type="text" name="competences" id="competences">
+                            </div>  
                             <div class="form-group">
                                 <!-- remarques -->
                                 <label for="remarques">Remarques</label>
-                                <input [(ngModel)]="remarques" class="form-control" type="text" name="remarques"
-                                    id="remarques">
-                            </div>
+                                <input [(ngModel)]="remarques" class="form-control" type="text" name="remarques" id="remarques">
+                            </div>  
                             <div class="form-group text-center">
                                 <button [disabled]="isSubmitting" (click)="addFormator()" type="button"
-                                    class=" btn btn-outline-info  mt-3">
+                                    class="btn button-add mt-3">
                                     Ajouter </button>
-                            </div>
+                             </div>
                         </form>
                     </div>
                 </div>
