add some changes to the administrator and assistant interfaces

--- a/angular-frontend/src/app/Admin/Individu/all-individus/all-individus.component.html
+++ b/angular-frontend/src/app/Admin/Individu/all-individus/all-individus.component.html
@@ -1,17 +1,16 @@
-<div class="container">
   <div class="main-content">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <div class="card">
-            <div class="card-header card-header-danger">
+          <div class="card" style="height: 460px;">
+            <div class="card-header card-header-danger sticky-top fixed">
               <h4 class="card-title">List Des Individus</h4>
             </div>
             <div class="card-body">
-              <div class="table-responsive">
+              <div class="table-responsive" style="max-height: 350px; overflow-y: auto;">
                 <table class="table">
-                  <thead class="text-primary text-center">
-                    <th>Id</th>
+                  <thead class="text-primary text-center fixed">
+                    <th>ID</th>
                     <th>Nom</th>
                     <th>Prenom</th>
                     <th>E-mail</th>
@@ -22,7 +21,7 @@
                   </thead>
                   <tbody class="text-center">
                     <tr *ngFor="let individu of individus">
-                      <td>{{ increment() }}</td>
+                      <td>{{ individu.id }}</td>
                       <td>{{ individu.nom }}</td>
                       <td>{{ individu.prenom }}</td>
                       <td>{{ individu.email }}</td>
@@ -30,16 +29,10 @@
                       <td>{{ individu.ville }}</td>
                       <td>{{ individu.dateNaissance }}</td>
                       <td class="text-center">
-                        <a
-                          [routerLink]="['/admin/individu', individu.id, 'update']"
-                          class="btn btn-outline-success mx-1"
-                          >Edit</a
-                        >
-                        <button
-                          *ngIf="permission"
-                          (click)="deleteIndividu(individu.id)"
-                          class="btn btn-outline-danger mx-1"
-                        >
+                        <a [routerLink]="['/admin/individu', individu.id, 'update']"
+                          class="btn btn-outline-success mx-1">Edit</a>
+                        <button *ngIf="permission" (click)="deleteIndividu(individu.id)"
+                          class="btn btn-outline-danger mx-1">
                           Delete
                         </button>
                       </td>
@@ -53,4 +46,3 @@
       </div>
     </div>
   </div>
-</div>
